--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section id="landing-page">
         <nav>
-            <div id="logo"><img src="./img/LOGOCOMPETITIONWHITE-removebg-preview.png" id="logo-pic" alt=""></div>
+            <div id="logo"><img src="supercomp.jpg" id="logo-pic" alt=""></div>
             <div>
                 <ul>
                     <li><a href="">Events</a></li>
@@ -41,7 +41,7 @@
             <div class="slider">
                 <div class="slider-item">
                     <div class="image-container">
-                        <img src="./img/cid1.jpg" alt="Image 1">
+                        <img src="1.png" alt="Image 1">
                     </div>
                     <div class="text-container">
                         <h3>Title 1</h3>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="slider-item">
                     <div class="image-container">
-                        <img src="./img/cid2.jpg" alt="Image 2">
+                        <img src="2.png" alt="Image 2">
                     </div>
                     <div class="text-container">
                         <h3>Title 2</h3>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="slider-item">
                     <div class="image-container">
-                        <img src="./img/cid3.jpeg" alt="Image 3">
+                        <img src="3.png" alt="Image 3">
                     </div>
                     <div class="text-container">
                         <h3>Title 3</h3>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="slider-item">
                     <div class="image-container">
-                        <img src="./img/cid4.jpg" alt="Image 4">
+                        <img src="4.png" alt="Image 4">
                     </div>
                     <div class="text-container">
                         <h3>Title 4</h3>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="slider-item">
                     <div class="image-container">
-                        <img src="./img/cid6.jpeg" alt="Image 5">
+                        <img src="5.png" alt="Image 5">
                     </div>
                     <div class="text-container">
                         <h3>Title 5</h3>
@@ -97,21 +97,31 @@
     <div class="collaborations-slider">
         <div class="carousel-container">
             <div class="carousel">
-                <img style="background:transparent;" src="img/our partners/SuperComp logo.svg" alt="Logo 1">
-                <img src="img/our partners/BUDS LOGO (No bg and No text) 1.png" alt="Logo 2">
-                <img src="img/our partners/image 5.png" alt="Logo 3">
-                <img src="img/our partners/image 6.png" alt="Logo 4">
-                <img src="img/our partners/image 7.png" alt="Logo 5">
-                <img src="img/our partners/image 8.png" alt="Logo 6">
-                <img src="img/our partners/image 9.png" alt="Logo 7">
+                <img style="background:transparent;" src="supercomp.jpg" alt="Logo 1">
+                <img src="buds.png" alt="Logo 2">
+                <img src="images.jpg" alt="Logo 3">
+                
 
-                <img src="img/our partners/SuperComp logo.svg" alt="Logo 1">
-                <img src="img/our partners/BUDS LOGO (No bg and No text) 1.png" alt="Logo 2">
-                <img src="img/our partners/image 5.png" alt="Logo 3">
-                <img src="img/our partners/image 6.png" alt="Logo 4">
-                <img src="img/our partners/image 7.png" alt="Logo 5">
-                <img src="img/our partners/image 8.png" alt="Logo 6">
-                <img src="img/our partners/image 9.png" alt="Logo 7">
+                <img style="background:transparent;" src="supercomp.jpg" alt="Logo 1">
+                <img src="buds.png" alt="Logo 2">
+                <img src="images.jpg" alt="Logo 3">
+
+                <img style="background:transparent;" src="supercomp.jpg" alt="Logo 1">
+                <img src="buds.png" alt="Logo 2">
+                <img src="images.jpg" alt="Logo 3">
+
+                <img style="background:transparent;" src="supercomp.jpg" alt="Logo 1">
+                <img src="buds.png" alt="Logo 2">
+                <img src="images.jpg" alt="Logo 3">
+
+                <img style="background:transparent;" src="supercomp.jpg" alt="Logo 1">
+                <img src="buds.png" alt="Logo 2">
+                <img src="images.jpg" alt="Logo 3">
+
+                <img style="background:transparent;" src="supercomp.jpg" alt="Logo 1">
+                <img src="buds.png" alt="Logo 2">
+                <img src="images.jpg" alt="Logo 3">
+                
             </div>
         </div>
     </div>
@@ -130,7 +140,7 @@
         <!-- Card 1 -->
         <div class="card">
             <div class="card-image">
-                <img src="img/analyze.gif" alt="Step 1">
+                <img src="maths-lz.gif" alt="Step 1">
             </div>
             <div class="card-content">
                 <div class="card-icon">
@@ -144,7 +154,7 @@
         <!-- Card 2 -->
         <div class="card">
             <div class="card-image">
-                <img src="img/brainstorm.gif" alt="Step 2">
+                <img src="thinking-tap.gif" alt="Step 2">
             </div>
             <div class="card-content">
                 <div class="card-icon">
@@ -158,7 +168,7 @@
         <!-- Card 3 -->
         <div class="card">
             <div class="card-image">
-                <img src="img/cat-computer.gif" alt="Step 3">
+                <img src="core-keeper-core.gif" alt="Step 3">
             </div>
             <div class="card-content">
                 <div class="card-icon">
@@ -172,7 +182,7 @@
         <!-- Card 4 -->
         <div class="card">
             <div class="card-image">
-                <img src="img/evaluation.gif" alt="Step 4">
+                <img src="nnn-venky.gif" alt="Step 4">
             </div>
             <div class="card-content">
                 <div class="card-icon">
